# cmakeList_seed_project

./: CMakeLists.txt  README.md
cmake/: DemLibraryConfig.cmake  DemLibraryTagets-debug.cmake  DemLibraryTagets.cmake
config/: DemLibraryConfig.cmake.in
src/: CMakeLists.txt
src/SayHello/: sayHello.cpp
src/include/: sayHello.h
test/: main.cpp
